--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1757,27 +1757,17 @@ input, select, textarea {
 		z-index: 1000;
 		top: 50%;
 		left: 50%;
-		width: 100%;
+		width: 220%;
 		height: 100%;
-		background-color: rgba(27, 31, 34, 0.8); /* Semi-transparent background */
+		background-color: rgba(27, 31, 34, 0.5); /* Semi-transparent background */
 		justify-content: center;
 		align-items: center;
 		transform: translate(-50%, -50%); /* Centers modal in the viewport */
 	}
 
 	.modal-content {
-		max-width: 90%;
-		max-height: 90%;
+		max-width: auto;
+		max-height: 35%;
 		border-radius: 8px;
-		box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-	}
-
-	.close {
-		position: absolute;
-		top: 20px;
-		right: 30px;
-		color: white;
-		font-size: 30px;
-		font-weight: bold;
-		cursor: pointer;
+		box-shadow: 4px 7px 7px 7px rgba(0, 0, 0, 0.5);
 	}
