--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1770,7 +1770,7 @@ input, select, textarea {
 		z-index: 1000;
 		top: 50%;
 		left: 50%;
-		width: 90vw;
+		width: 95vw;
 		background-color: rgba(27, 31, 34, 0.5); /* Semi-transparent background */
 		justify-content: center;
 		align-items: center;
@@ -1790,8 +1790,8 @@ input, select, textarea {
 	.prev, .next {
 		position: absolute;
 		top: 50%;
-		color: white;
-		font-size: 36px;
+		color: rgba(244, 250, 255, 0.801);
+		font-size: 72px;
 		cursor: pointer;
 		z-index: 10000;
 		transform: translateY(-50%);
@@ -1799,11 +1799,11 @@ input, select, textarea {
 	}
 	
 	.prev {
-		left: 10px;
+		left: 0px;
 	}
 	
 	.next {
-		right: 10px;
+		right: 0px;
 	}
 	
 /* Shelf Gallery Styling */
@@ -1864,4 +1864,3 @@ input, select, textarea {
 		font-size: 14px;
 		color: #b9bbbd;
 	}
-	
