--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1784,26 +1784,38 @@ input, select, textarea {
 		display: block;
 		max-width: 90vw;
 		max-height: 95vh;
-		
 	}
 
 	.prev, .next {
 		position: absolute;
+		display: flex;
 		top: 50%;
-		color: rgba(244, 250, 255, 0.801);
-		font-size: 72px;
+		color: rgba(250, 250, 250, 0.901);
+		background-color: rgba(0, 0, 0, 0.2);
+		width: 45px;
+		height: 45px;
+		box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* Subtle shadow */
+		border-radius: 50%; /* Round buttons */
+		font-size: 36px;
+		justify-content: center;
+		align-items: center;
 		cursor: pointer;
 		z-index: 10000;
 		transform: translateY(-50%);
 		user-select: none;
+		transition: transform 0.2s, box-shadow 0.2s; /* Smooth hover effect */
 	}
-	
+
+	.prev:hover, .next:hover {
+		box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5); /* Stronger shadow */
+	}
+
 	.prev {
-		left: 0px;
+		left: 10px;
 	}
 	
 	.next {
-		right: 0px;
+		right: 10px;
 	}
 	
 /* Shelf Gallery Styling */
